--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@
 .button-box {
 	padding-bottom: 2em;
 }
+
+.jumbotron {
+    position: relative;
+    background: #000 url("images/main/main_page.jpg") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+}
